--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html {
 }
 
 p {
-    color: rgb((85), 85, 85);
+    color: rgb(85, 85, 85);
 }
 
 dt {
@@ -232,7 +232,7 @@ text-align: center;
 }
 
 .btn-color-1, .btn-color-2 {
-    border: rgb(53, 53, 53);
+    border: 0.1rem solid rgb(53, 53, 53);
 }
 
 .btn-color-1:hover, .btn-color-2:hover {
@@ -269,9 +269,33 @@ color:white;
 }
 
 .about-containers{
-    gap: 2rem;
+    gap: 4rem;
     margin-bottom: 2rem;
     margin-top: 2rem;
+    padding: 0 1rem;
+    max-width: 100%;
+    box-sizing: border-box;
+}
+
+/* FIX FOR DEFINITION LISTS IN ABOUT SECTION */
+#about dl {
+    margin: 1rem 0;
+}
+
+#about dd {
+    margin-left: 0;
+    margin-inline-start: 0;
+    padding-left: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+#about dt {
+    margin-bottom: 0.5rem;
+    margin-top: 1rem;
+}
+
+#about dt:first-of-type {
+    margin-top: 0;
 }
 
 .about-details-container{
@@ -399,6 +423,7 @@ article.icon {
 .project-btn {
     color: black;
     border-color: rgb(163,163,163);
+    margin-top: 4%;
 }
 
 /* CONTACT */
@@ -416,7 +441,7 @@ article.icon {
     border-radius: 2rem;
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color:rgb(163,163,163);
-    background: (250,250,250);
+    background: rgb(250, 250, 250);
     margin: 2rem auto;
     padding: 0.5rem;   
 }
